# tinyxml2_demo

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  user.xml  xml_test
src/: xml2_test.cpp
